<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

   <ListPreference
      android:entries="@array/guesses_list"
      android:entryValues="@array/guesses_list"
      android:key="pref_numberOfChoices"
      android:title="@string/number_of_choices"
      android:summary="@string/number_of_choices_description"
      android:persistent="true"
      android:defaultValue="4" />

   <MultiSelectListPreference
       android:defaultValue="@array/element_group_list"
       android:entries="@array/element_group_list_for_settings"
       android:entryValues="@array/element_group_list"
       android:key="pref_elementGroupsToInclude"
       android:persistent="true"
       android:summary="@string/element_group_description"
       android:title="@string/element_groups" />

</PreferenceScreen>