<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:showIn="@layout/activity_main"
                tools:context="ca.uwindsor.id104924033.MainActivityFragment"
              android:orientation="vertical"
              android:id="@+id/quizLinearLayout">

   <TextView
       android:id="@+id/questionNumberTextView"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginBottom="@dimen/spacing"
       android:text="@string/question"
       android:textAppearance="@android:style/TextAppearance.Material.Headline" />

   <TextView
       android:id="@+id/scoreTextView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_gravity="center_horizontal"
       android:layout_marginBottom="@dimen/spacing"
       android:text="SCORE"
       android:textAlignment="center"
       android:textAppearance="?android:attr/textAppearanceMedium" />

   <TextView
       android:id="@+id/quizTextView"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="TextView"
       android:textAppearance="@android:style/TextAppearance.Material.Headline" />

   <TextView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textAppearance="?android:attr/textAppearanceMedium"
      android:text="@string/guess_element"
      android:id="@+id/guessCountryTextView"
      android:layout_gravity="center_horizontal"/>

   <LinearLayout
      android:orientation="horizontal"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/row1LinearLayout">

      <Button
          android:id="@+id/button"
          style="@android:style/Widget.Material.Button.Colored"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:lines="2"
          android:text="@string/trueText"
          android:textColor="@color/button_text_color" />

      <Button
          android:id="@+id/button2"
          style="@android:style/Widget.Material.Button.Colored"
          android:layout_width="0dp"
          android:layout_height="match_parent"
          android:layout_weight="1"
          android:lines="2"
          android:text="@string/falseText"
          android:textColor="@color/button_text_color" />

   </LinearLayout>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

       <TextView
           android:id="@+id/answerTextView"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_gravity="bottom|center_horizontal"
           android:layout_weight="4"
           android:gravity="center_horizontal"
           android:text="Medium Text"
           android:textAppearance="?android:attr/textAppearanceMedium"
           android:textSize="@dimen/answer_size"
           android:textStyle="bold" />

      <Button
          android:id="@+id/exitButton"
          style="@android:style/Widget.Material.Light.Button"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:elevation="4dp"
          android:onClick="exitApp"
          android:text="@string/exitButton" />
   </LinearLayout>

</LinearLayout>
